--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -46,7 +46,7 @@ jobs:
         tar -xvf ruby-${{env.UNDERSCORE_VERSION}}.tar.gz
         cd ruby-${{env.UNDERSCORE_VERSION}}
         mkdir output
-        ./configure --prefix="${{PWD}}/output"
+        ./configure --prefix="${{env.PWD}}/output"
         make
         make install
         tar -czvf ruby.tar.gz output
