only build for x86_64 linux for now

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -19,9 +19,9 @@ jobs:
     strategy: 
       matrix:
         include:
-          - os: macos-latest
-            name: macos_x86_64
-            target: x86_64-apple-darwin
+       #   - os: macos-latest
+       #     name: macos_x86_64
+       #     target: x86_64-apple-darwin
        #   - os: macos-latest
        #     name: macos_aarch64
        #     target: aarch64-apple-darwin
