--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -50,6 +50,7 @@ jobs:
         tar -xvf ruby-${{env.VERSION}}.tar.gz
         cd ruby-${{env.VERSION}}
         mkdir output
+        echo "present working directory: ${{env.PWD}}"
         chmod +x configure.ac
         ./configure --prefix="${{env.PWD}}/output"
         make
