--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -49,11 +49,9 @@ jobs:
         ls
         tar -xvf ruby-${{env.VERSION}}.tar.gz
         cd ruby-${{env.VERSION}}
-        mkdir output
-        chmod 777 output
-        echo "present working directory: ${{env.PWD}}"
+        echo "git workspace: ${{github.workspace}}"
         chmod +x configure.ac
-        ./configure --prefix="${{env.PWD}}/output"
+        ./configure --prefix="${{ github.workspace }}/download/ruby-${{env.VERSION}}/output"
         make
         make install
         tar -czvf ruby.tar.gz output
