--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -35,6 +35,8 @@ jobs:
        #     name: windows_x86_64
        #     target: x86_64-pc-windows-msvc
     steps:
+    - name: pull dependencies
+    - uses: actions/checkout@v3
     - name: make download directory
       run: mkdir download
     - uses: suisei-cn/actions-download-file@v1.3.0
