--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -56,7 +56,7 @@ jobs:
         ./solipath poetry run conan install --build=missing -of build .
         cd build
         chmod +x conanbuild.sh
-        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --disable-shared --enable-static --prefix="$PWD/bin" && make && make install
+        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --enable-load-relative --disable-shared --enable-static --prefix="$PWD/bin" && make && make install
         tar -czvf ruby.tar.gz bin
     - name: release ruby
       uses: "marvinpinto/action-automatic-releases@latest"
