--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -21,13 +21,19 @@ jobs:
         include:
           - os: macos-latest
             name: macos_x86_64
-            target: default
+            conan_target: default
+            target: x86_64-apple-darwin
+            build: x86_64-apple-darwin
           - os: macos-latest
             name: macos_aarch64
-            target: m1profile
+            conan_target: m1profile
+            target: aarch64-apple-darwin
+            build: x86_64-apple-darwin
           - os: ubuntu-latest
             name: linux_x86_64
-            target: default
+            conan_target: default
+            target: x86_64-unknown-linux-gnu
+            build: x86_64-unknown-linux-gnu
        #   - os: ubuntu-latest
        #     name: linux_aarch64
        #     target: aarch64-unknown-linux-gnu
@@ -53,10 +59,10 @@ jobs:
         cd ..
         ./solipath poetry install
         ./solipath poetry run conan profile detect
-        ./solipath poetry run conan install --build=missing --profile:host=${{matrix.target}} --profile:target=${{matrix.target}} -of build .
+        ./solipath poetry run conan install --build=missing --profile:host=${{matrix.conan_target}} -of build .
         cd build
         chmod +x conanbuild.sh
-        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin" && make && make install
+        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --build=${{matrix.build}} --host=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin" && make && make install
         tar -czvf ruby.tar.gz bin
     - name: release ruby
       uses: "marvinpinto/action-automatic-releases@latest"
