--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -22,17 +22,20 @@ jobs:
           - os: macos-latest
             name: macos_x86_64
             conan_target: default
-            target: x86_64-apple-darwin
+            target: x86_64-apple-darwini
+            arch: x86_64
             build: x86_64-apple-darwin
           - os: macos-latest
             name: macos_aarch64
             conan_target: m1profile
             target: aarch64-apple-darwin
+            arch: aarch64
             build: x86_64-apple-darwin
           - os: ubuntu-latest
             name: linux_x86_64
             conan_target: default
             target: x86_64-unknown-linux-gnu
+            arch: x86_64
             build: x86_64-unknown-linux-gnu
        #   - os: ubuntu-latest
        #     name: linux_aarch64
@@ -62,7 +65,7 @@ jobs:
         ./solipath poetry run conan install --build=missing --profile:host=${{matrix.conan_target}} -of build .
         cd build
         chmod +x conanbuild.sh
-        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin" && make && make install
+        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin" && make ARCH=${{matrix.arch}} CROSS_COMPILE=${{matrix.target}} && make install
         tar -czvf ruby.tar.gz bin
     - name: release ruby
       uses: "marvinpinto/action-automatic-releases@latest"
