set compiler on CC to full path

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -41,7 +41,7 @@ jobs:
             name: linux_aarch64
             conan_target: aarch64linuxprofile
             target: aarch64-unknown-linux-gnu
-            compiler: gcc-aarch64-linux-gnu
+            compiler: /usr/bin/aarch64-linux-gnu-gcc
             build: x86_64-unknown-linux-gnu
 
        #   - os: ubuntu-latest
@@ -84,7 +84,7 @@ jobs:
         echo "Print Makefile:"
         cat Makefile
         echo "start build"
-        ./conanbuild.sh && make && make install
+        ./conanbuild.sh && make CC=${{matrix.compiler}} && make install
         tar -czvf ruby.tar.gz bin
     - name: release ruby
       uses: "marvinpinto/action-automatic-releases@latest"
