set build back to what it should be

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -76,7 +76,7 @@ jobs:
         ./solipath poetry run conan install --build=missing --profile:host=${{matrix.conan_target}} -of build .
         cd build
         chmod +x conanbuild.sh
-        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --build=${{matrix.target}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin"
+        ./conanbuild.sh && ../ruby-${{env.VERSION}}/configure --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin"
     - name: compile ruby
       run: |
         cd build
