--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -61,7 +61,7 @@ jobs:
         target: download
     - name: get compiler for aarch64 linux
       if: ${{'aarch64-unknown-linux-gnu' == matrix.target}}
-      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu
+      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu linux-libc-dev-arm64-cross
     - name: configure ruby build
       run: |
         uname -m
