--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -37,12 +37,12 @@ jobs:
             target: x86_64-unknown-linux-gnu
             compiler: gcc
             build: x86_64-unknown-linux-gnu
-      #    - os: ubuntu-latest
-      #      name: linux_aarch64
-      #      conan_target: aarch64linuxprofile
-      #      target: aarch64-unknown-linux-gnu
-      #      compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
-      #      build: x86_64-unknown-linux-gnu
+          - os: ubuntu-latest
+            name: linux_aarch64
+            conan_target: aarch64linuxprofile
+            target: aarch64-unknown-linux-gnu
+            compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
+            build: x86_64-unknown-linux-gnu
 
        #   - os: ubuntu-latest
        #     name: linux_aarch64
@@ -61,7 +61,7 @@ jobs:
         target: download
     - name: get compiler for aarch64 linux
       if: ${{'aarch64-unknown-linux-gnu' == matrix.target}}
-      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu
+      run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu libz-dev
     - name: configure ruby build
       run: |
         uname -m
