--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -25,24 +25,24 @@ jobs:
             target: x86_64-apple-darwin
             compiler: clang
             build: x86_64-apple-darwin
-          #- os: macos-latest
-          #  name: macos_aarch64
-          #  conan_target: m1profile
-          #  target: aarch64-apple-darwin
-          #  compiler: armv8a-apple-darwin-clang
-          #  build: aarch64-apple-darwin
+          - os: macos-latest
+            name: macos_aarch64
+            conan_target: m1profile
+            target: aarch64-apple-darwin
+            compiler: clang -arch arm64
+            build: aarch64-apple-darwin
           - os: ubuntu-latest
             name: linux_x86_64
             conan_target: default
             target: x86_64-unknown-linux-gnu
             compiler: gcc
             build: x86_64-unknown-linux-gnu
-          - os: ubuntu-latest
-            name: linux_aarch64
-            conan_target: aarch64linuxprofile
-            target: aarch64-unknown-linux-gnu
-            compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
-            build: x86_64-unknown-linux-gnu
+          #- os: ubuntu-latest
+          #  name: linux_aarch64
+          #  conan_target: aarch64linuxprofile
+          #  target: aarch64-unknown-linux-gnu
+          #  compiler: /usr/bin/aarch64-linux-gnu-gcc -DPAGE_SIZE=16384
+          #  build: x86_64-unknown-linux-gnu
 
        #   - os: ubuntu-latest
        #     name: linux_aarch64
