--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -62,6 +62,9 @@ jobs:
     - name: get compiler for aarch64 linux
       if: ${{'aarch64-unknown-linux-gnu' == matrix.target}}
       run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu zlib1g-dev
+    - name: get specific intel ruby for cross compile
+      if: ${{'aarch64-apple-darwin' == matrix.target}}
+      run: brew install ruby@3.2
     - name: configure ruby build
       run: |
         uname -m
