--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -21,19 +21,16 @@ jobs:
         include:
           - os: macos-latest
             name: macos_x86_64
-            conan_target: default
             target: x86_64-apple-darwin
             compiler: clang
             build: x86_64-apple-darwin
           - os: macos-latest
             name: macos_aarch64
-            conan_target: m1profile
             target: aarch64-apple-darwin
             compiler: clang -arch arm64
             build: aarch64-apple-darwin
           - os: ubuntu-latest
             name: linux_x86_64
-            conan_target: default
             target: x86_64-unknown-linux-gnu
             compiler: gcc
             build: x86_64-unknown-linux-gnu
@@ -62,9 +59,6 @@ jobs:
     - name: get compiler for aarch64 linux
       if: ${{'aarch64-unknown-linux-gnu' == matrix.target}}
       run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu zlib1g-dev
-    - name: get specific intel ruby for cross compile
-      if: ${{'aarch64-apple-darwin' == matrix.target}}
-      run: brew install ruby@3.2
     - name: configure ruby build
       run: |
         uname -m
@@ -74,13 +68,8 @@ jobs:
         mv ruby-${{env.VERSION}} ..
         echo "git workspace: ${{github.workspace}}"
         cd ..
-        #./solipath poetry install
-        #./solipath poetry run conan profile detect
-        #./solipath poetry run conan install --build=missing --profile:host=${{matrix.conan_target}} -of build .
         mkdir build
         cd build
-        #chmod +x conanbuild.sh
-        #./conanbuild.sh &&
         ../ruby-${{env.VERSION}}/configure --build=${{matrix.build}} --host=${{matrix.target}} --target=${{matrix.target}} --enable-load-relative --disable-shared --enable-static --without-gmp --prefix="$PWD/bin"
     - name: compile ruby
       run: |
@@ -101,4 +90,7 @@ jobs:
         title: "${{env.VERSION}}-${{matrix.name}}"
         files: |
           build/ruby.tar.gz
+    - name: kick off cross compilation
+      if: ${{'x86_64-apple-darwin' == ${{matrix.target}}
+      run: gh workflow run m1maccompile.yml -f VERSION=${{env.VERSION}} -f SHORT_VERSION=${{env.SHORT_VERSION}}
           
