set build properly on aarch64 mac

--- a/.github/workflows/m1maccompile.yml
+++ b/.github/workflows/m1maccompile.yml
@@ -27,7 +27,7 @@ jobs:
             name: macos_aarch64
             target: aarch64-apple-darwin
             compiler: clang -arch arm64
-            build: aarch64-apple-darwin
+            build: x86_64-apple-darwin
 
     steps:
     - name: checkout code
