--- a/.github/workflows/m1maccompile.yml
+++ b/.github/workflows/m1maccompile.yml
@@ -60,7 +60,7 @@ jobs:
         cat Makefile
         echo "start build"
         #./conanbuild.sh && 
-        ./solipath make CC='${{matrix.compiler}}' && make install
+        CC='${{matrix.compiler}}' && ./solipath make CC='${{matrix.compiler}}' && make install
         tar -czvf ruby.tar.gz bin
     - name: release ruby
       uses: "marvinpinto/action-automatic-releases@latest"
