--- a/.github/workflows/m1maccompile.yml
+++ b/.github/workflows/m1maccompile.yml
@@ -47,6 +47,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Download openssl
       id: openssl
+      uses: suisei-cn/actions-download-file@v1.3.0
       with:
         url: "https://github.com/openssl/openssl/releases/download/OpenSSL_1_1_1w/openssl-1.1.1w.tar.gz"
         target: openssl
