--- a/.github/workflows/m1maccompile.yml
+++ b/.github/workflows/m1maccompile.yml
@@ -65,7 +65,7 @@ jobs:
         cd openssl-1.1.1w
         mkdir build
         cd build
-        CC='${{matrix.compiler}}' ../Configure --prefix="${{github.workspace}}/libraries" darwin64-arm64-cc no-shared
+        CC='${{matrix.compiler}}' ../Configure --prefix="-L${{github.workspace}}/libraries" darwin64-arm64-cc no-shared
         make
         make install
     - name: configure ruby build
